Fixed bug on iOS where answer buttons stayed in an active state after submitting an answer

--- a/style.css
+++ b/style.css
@@ -73,12 +73,6 @@ ul {
     color: white;
 }
 
-.btn-light:focus {
-    background-color: #2C4251;
-    border-color: #2C4251;
-    color: white;
-}
-
 .btn-light:hover {
     background-color: #FF784F;
     border-color: #FF784F;
